# rshell

./: .gitignore  CMakeLists.txt  README.md  makefile  rshell-formatting.xml
headers/: Parser.h  RShell.h  Redirector.h
headers/tasks/: ConditionalTask.h  ExitTask.h  ExternalTask.h  Task.h  TaskList.h  TestTask.h
headers/utils/: EnvUtils.h  FileUtils.h
src/: Parser.cpp  RShell.cpp  Redirector.cpp  main.cpp
src/tasks/: ConditionalTask.cpp  ExitTask.cpp  ExternalTask.cpp  Task.cpp  TaskList.cpp  TestTask.cpp
src/utils/: EnvUtils.cpp  FileUtils.cpp
tests/: commented_command.sh  exit.sh  multi_command.sh  precedence_test.sh  redirect_test.sh  single_command.sh  test_test.sh
